<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aei2.peopleplaces.MainActivity">

    <TextView
        android:id="@+id/lblLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLatitude" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="btnPauseClicked"
        android:text="@string/lblPause" />

    <TextView
        android:id="@+id/lblLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblLatitude"
        android:text="@string/lblLongitude" />

    <TextView
        android:id="@+id/lblLatitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblLongitude"
        android:layout_toEndOf="@+id/lblLongitude"
        android:layout_toRightOf="@+id/lblLongitude"
        android:paddingLeft="2dp"
        android:text="@string/lblZero" />

    <TextView
        android:id="@+id/lblLongitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblLongitude"
        android:layout_alignParentEnd="false"
        android:layout_toEndOf="@+id/lblLongitude"
        android:layout_toRightOf="@+id/lblLongitude"
        android:paddingLeft="2dp"
        android:text="@string/lblZero"
        android:layout_alignParentRight="false" />

    <TextView
        android:id="@+id/lblBlockID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblLongitude"
        android:text="@string/lblBlockID" />

    <TextView
        android:id="@+id/lblBlockIDValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblBlockID"
        android:layout_alignParentEnd="false"
        android:layout_toEndOf="@+id/lblBlockID"
        android:layout_toRightOf="@+id/lblBlockID"
        android:paddingLeft="2dp"
        android:text="@string/Zero"
        android:layout_alignParentRight="false"
        android:textSize="8sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lblBlockID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" >

    <com.github.mikephil.charting.charts.PieChart
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/idPieChart">
        </com.github.mikephil.charting.charts.PieChart>

    </FrameLayout>
    <!-- Loading indicator is shown before data query loads -->
    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/fab"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/fab_margin" />

</RelativeLayout>

